# QDrive

./: .clang-format  .gitignore  CMakeLists.txt
client/: CMakeLists.txt  main.cpp  resources.qrc  window-format.h
client/gui/: main.qml
client/views/windows-linux/: main.qml
libs/: CMakeLists.txt
server/: CMakeLists.txt  main.cpp  main.py
tests/: CMakeLists.txt
tests/client_tests/: main_tests.cpp
tests/server_tests/: main_tests.cpp
